--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.netflix-bg{
+    background-image: url('../img/netflix-bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
