--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components{
+    .animation{
+        @apply transition-all duration-300 ease-in-out
+    }
+}
+
+*{
+    background: '#fff';
+}
+
 .netflix-bg{
-    background-image: url('../img/netflix-bg.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.9)) ,url('../img/netflix-bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+@keyframes moving{
+    from{
+    }
+    to{
+    }
 }
